Revision history for Perl module Handel

1.00006 Sun Oct 21 13:10:23 2007
    - Updated Clone prereq version to 0.28 (Collin Condray)
    - Fixed Quicktart to use schema --install (Charlie Garrison)

1.00005 Wed Aug 22 21:42:33 2007
    - Catalyst Helper code uses as_string instead of format
    - Updated profiles regexps for newer YAML

1.00004 Tue Aug 21 21:01:10 2007
    - Removed RDBO M::I feature in Makefile.PL (RT#28461,ANDK)
    - Fixed exception tests message checks under l10n (RT#28927,RDROUSIES)
    - Added Bulgarian L10N - Kliment A. Ognianov

1.00003 Tue July 24 20:55:32 2007
    - Changed tests to use TEST_AUTHOR instead
    - Converted to Module::Install

1.00002 Sat June 30 17:15:12 2007
    - Catalyst Model tests now skip when Catalyst not installed
    - Fixed Catalyst tests after fresh perl install explosion
    - Fixed pod coverage

1.00001 Mon June 25 22:05:26 2007
    - Fixed basic.t use_ok failures due to dev install
    - Fixed various test skip counts
    - Fixed Component::Validation to deal with new
        DBIC::Validation/throw_exception changes

1.00000 Sun June 24 08:57:22 2007
    - constraint_price now uses $currency->value if value isa
        Data::Currency object

0.99_19 Thur June 21 21:02:36 2007
    - Storage->setup now puts non-accessor keys into %$self
    - Removed incomplete L10N Lexicons
    - Cleanup coverage before 1.0 release
    - DBIx::Class 0.08 Released & Required
    - Added AutoCommit to Handel::Test
    - Tweaked failing checkout process tests

0.99_18 Wed Apr 18 19:55:09 2007
    - Added --version to handel.pl/handel.bat
    - Fixed Handel::Compat::Currency pod
    - Updated prereq to use DBIx::Class 0.07999_02
    - Added skips for DBD::SQLite 1.13 (teh devil) causing failing tests
    - Updated Perl::Critic tests

0.99_17 Wed Mar 21 20:11:24 2007
    - Renamed ConfigReaders %Defaults to %DEFAULTS
    - Removed t/style_critic_tests. ETOOMUCHWORKFORLITTLEBENEFIT
    - Updated Test::MockObject in tests to 1.07