@@ -47,6 +47,7 @@ Build.bat
 \#$
 \b\.#
 \.kpf$
+Handel.kpf
 
 # Avoid author test files.
 \bpod-spelling.t$
