@@ -75,7 +75,7 @@ thrown containing the the result object returned from the validation module.
 =head2 validate
 
 Validates the data using the specified validation module/profile. If validation
-succeeds, the result object from the validaiton module is returned. If
+succeeds, the result object from the validation module is returned. If
 validation fails, a Handel:Exception::Validation will be thrown.
 
 =head2 throw_exception
