@@ -20,6 +20,7 @@ add_stopwords(<DATA>);
 all_pod_files_spelling_ok();
 
 __DATA__
+MyApp
 createdb
 behaviour
 handel
